docs(README): Enhance application run instructions and troubleshooting section for JavaFX and module resolution issues